--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.6.3",
+    "lucide-react": "^0.487.0",
     "react-bootstrap": "^2.10.9",
     "react-calendar": "^5.1.0",
     "react-icons": "^5.5.0",
     "react-native-calendars": "^1.1310.0",
+    "react-router-dom": "^7.5.0",
     "react-spreadsheet": "^0.9.5",
     "scheduler": "^0.25.0"
   },
@@ -33,7 +36,7 @@
     "globals": "^15.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "reactjs-popup": "^2.0.6",
     "vite": "^6.0.5",
     "web-vitals": "^2.1.4"
