--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nomv0-002",
+  "name": "nom",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,28 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.0.8",
-    "@tailwindcss/vite": "^4.0.3",
+    "auth": "^1.2.3",
+    "dayjs": "^1.11.13",
     "esbuild": "^0.25.0",
-    "framer-motion": "^12.4.7",
+    "firebase": "^11.6.0",
+    "framer-motion": "^12.6.5",
     "lucide-react": "^0.475.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.5"
+    "papaparse": "^5.5.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.0",
+    "recharts": "^2.15.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^1.3.2",
+    "@eslint/js": "^9.19.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react": "^7.37.2",
+    "eslint": "^9.19.0",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
+    "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.3",
-    "vite": "^6.0.5"
+    "postcss": "^8.5.2",
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.1.0"
   }
 }
