--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "auth": "^1.2.3",
     "dayjs": "^1.11.13",
     "esbuild": "^0.25.0",
     "firebase": "^11.6.0",
     "framer-motion": "^12.6.5",
+    "heroicons": "^2.2.0",
+    "icons": "^1.0.0",
     "lucide-react": "^0.475.0",
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "recharts": "^2.15.2"
   },
